# rag-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_rag_tables.py  002_fix_soft_delete_rls.py  002_rls_child_tables.py
docs/: alloy_db_manual_ingestion_implementation_plan_v_1.md  architecture.md  deployment.md  rag-search-testing-guide.md  vscode-mcp-setup.md
rag_mcp/: Dockerfile  config.py  oidc.py  server.py  tools.py
rag_service/: Dockerfile  Dockerfile.ingestor  app.py  auth.py  config.py  db.py  embedding.py  logging_config.py  models.py
rag_service/chunking/: chunker.py
rag_service/eval/: metrics.py
rag_service/ingestion/: cli.py  config.py  gcs.py  main.py  planner.py  runner.py  types.py
rag_service/ingestion/extractors/: base.py  docx.py  html.py  image.py  pdf.py  text.py
rag_service/ingestion/ocr/: document_ai.py
rag_service/stores/: rag_document_store.py  rag_search_store.py
scripts/: create-scann-indexes.sql  seed-dev-data.py
tests/: conftest.py
tests/eval/: conftest.py  eval_dataset.json  test_retrieval_metrics.py  test_retrieval_quality.py
tests/fixtures/ingestion/: excessive_newlines.txt  malformed.html  sample.html  sample.md  sample.txt  script_only.html  script_style.html
tests/integration/: conftest.py  test_dedup.py  test_hybrid_search.py  test_ingestion_dedup.py  test_ingestion_runner.py  test_rls.py
tests/unit/: conftest.py  test_auth.py  test_chunker.py  test_embedding.py  test_endpoints.py  test_extractors.py  test_ingestion.py  test_mcp_oidc.py  test_mcp_tools.py  test_search_store.py
